--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@
         <div class="scoreboard-letter" id="letter-32"></div>
         <div class="scoreboard-letter" id="letter-33"></div>
         <div class="scoreboard-letter" id="letter-34"></div>
+
+        </div>
+        <div class="instruction">
+          <h2>How to Play</h2>
+          <hr>
+          <p>Word Master is a fully cooperative word-based guessing game in which the Guide must help the Seekers find a secret word from multiple hint provided</p>
+        
+          <ul>
+            <li><span class="dot"></span>Guess the correct five letter word</li>
+            <li>Green <span class="dot"></span> Signifies a correct letter in the right spot</li>
+            <li>Orange <span class="dot"></span> Signifies a correct letter in a wrong spot</li>
+            <li>Ash <span class="dot"></span> Signifies a letter not present in the correct word</li>
+          </ul>
+        </div>
+  
         
 
     </div>
