--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
           <p>Word Master is a fully cooperative word-based guessing game in which the Guide must help the Seekers find a secret word from multiple hint provided</p>
         
           <ul>
-            <li><span class="dot"></span>Guess the correct five letter word</li>
-            <li>Green <span class="dot"></span> Signifies a correct letter in the right spot</li>
-            <li>Orange <span class="dot"></span> Signifies a correct letter in a wrong spot</li>
-            <li>Ash <span class="dot"></span> Signifies a letter not present in the correct word</li>
+            <li></span>Guess the correct five letter word</li>
+            <li><span class="dot1"></span> &nbsp; Green Signifies a correct letter in the right spot</li>
+            <li><span class="dot2"></span> &nbsp; Orange </span> Signifies a correct letter in a wrong spot</li>
+            <li><span class="dot3"></span> &nbsp; Ash Signifies a letter not present in the correct word</li>
           </ul>
         </div>
   
