--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordy Masters</title>
+    <title>Wordy Master</title>
     <link rel="stylesheet" href="style.css">
 </head>
   <body>
     <header class="navbar">
-        <h1 class="brand">Word Masters</h1>
+        <h1 class="brand">Wordy Master</h1>
     </header>
     <div class="info-bar show">
         <div class="spiral">🌀</div>
@@ -55,7 +55,7 @@
         <div class="instruction">
           <h2>How to Play</h2>
           <hr>
-          <p>Word Master is a fully cooperative word-based guessing game in which the Guide must help the Seekers find a secret word from multiple hint provided</p>
+          <p>Wordy Master is a fully cooperative word-based guessing game in which the Guide must help the Seekers find a secret word from multiple hint provided</p>
         
           <ul>
             <li></span>Guess the correct five letter word</li>
